# web-pengolahan-citra

./: .gitignore  LEARN.md  LICENSE  README.md  app.py  dev-requirements.txt  packages.txt  pyproject.toml  requirements.txt
templates/: base.html  edge_detection.html  home.html  morfologi.html  morfologi_lanjutan.html  thresholding.html
