[project]
name = "web-pengolahan-citra"
version = "0.1.0"
description = "Website untuk melakukan pengolahan citra dengan menggunakan metode Thresholding, Edge detection, dll guna menyelesaikan tugas-tugas mata kuliah Pengolahan Citra"

readme = "README.md"
requires-python = ">=3.10"

[project.dependencies]
dependencies = "requirements.txt"

[project.optional-dependencies]
dev-requirements = {file = "dev-requirements.txt"}
